--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -9,6 +9,6 @@
   <% if list.image.attached? %>
     <%= image_tag list.image, size: "200x200" %>
   <% else %>
-    <%= image_tag 'no_image', size: "200×200" %>
+    <%= image_tag 'no_image', size: "200x200" %>
   <% end %>
 <% end %>
